# Index2

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.cc  main.cc
Index/: CMakeLists.txt
Index/Include/: CMakeLists.txt
Index/Include/Include_Index/: CMakeLists.txt  index  index_macros  index_macros_end  index_ui  index_ui_macros  index_ui_macros_end
Index/Include/Include_Index/index_impl/: CMakeLists.txt  include.cc
Index/Include/Include_Index/index_impl/animation/: CMakeLists.txt  animation.cc  include.cc  transition.cc
Index/Include/Include_Index/index_impl/animation/animations/: CMakeLists.txt
Index/Include/Include_Index/index_impl/core/: CMakeLists.txt  include.cc  types.cc
Index/Include/Include_Index/index_impl/core/alignment/: alignment.cc
Index/Include/Include_Index/index_impl/core/color/: color.cc
Index/Include/Include_Index/index_impl/easing/: CMakeLists.txt  easing.cc  easings.cc  include.cc
Index/Include/Include_Index/index_impl/fix/: include.cc  windows_fix.cc
Index/Include/Include_Index/index_impl/helpers/: CMakeLists.txt  include.cc
Index/Include/Include_Index/index_impl/include/: CMakeLists.txt  include.cc  ntdll.cc  windows_fix.cc
Index/Include/Include_Index/index_impl/macros/: CMakeLists.txt  index_macros.cc  index_macros_end.cc
Index/Include/Include_Index/index_impl/memory/: CMakeLists.txt  memory.cc  multilevelptr.cc
Index/Include/Include_Index/index_impl/std/: CMakeLists.txt  include.cc
Index/Include/Include_Index/index_impl/time/: CMakeLists.txt  include.cc
Index/Include/Include_Index/index_impl/ui/: CMakeLists.txt  include.cc  ui.cc  ui_std.cc
Index/Include/Include_IndexMem/: CMakeLists.txt  index_mem
Index/Include/Include_IndexMem/index_mem_impl/: CMakeLists.txt
Index/Include/Include_IndexMem/index_mem_impl/memory/: CMakeLists.txt  include.cc  memory.cc  multilevelptr.cc
Index/Include/Include_IndexUI/: CMakeLists.txt  index_ui  index_ui_macros  index_ui_macros_end
Index/Include/Include_IndexUI/index_ui_impl/: CMakeLists.txt  include.cc  index.cc
Index/Include/Include_IndexUI/index_ui_impl/ui/: CMakeLists.txt  include.cc  ui.cc
Index/Include/Include_IndexUI/index_ui_impl/ui_input/: CMakeLists.txt  include.cc  ui.cc
Index/Include/Include_IndexUI/index_ui_impl/ui_std/: CMakeLists.txt  include.cc
Index/Lib/: CMakeLists.txt
Index/Lib/ImGui/: CMakeLists.txt
Index/Lib/ImGui/Impl/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h
Test/: CMakeLists.txt
Test/ImSDL/: CMakeLists.txt  inc.h  main.cc  util.h
Test/ImSDL/ui/: key.h  ui.h  ui_descriptor.h
Test/ImSDL/ui/elements/: ImRoot.h  Rectangle.h  all.h
src/: Window.h  imui.txt
tests/: CMakeLists.txt
tests/IndexTest1/: CMakeLists.txt
(+72 files in other folders)
